Thu Nov 22 13:56:55 2001  Owen Taylor  <otaylor@redhat.com>

	* Version 1.3.11

Thu Nov 22 13:14:18 2001  Owen Taylor  <otaylor@redhat.com>

	* configure.in (GLIB_MICRO_VERSION): Version 11, 
	interface, binary age 0.

	* NEWS: Updated.

 	* tests/Makefile.am (libmoduletestplugin_[ab]_la_LDFLAGS): 
 	Add dummy -rpath argument. On some (but not all) platforms,
 	libtool will only build a convenience library without this.
 	(#63486, Dan Winship)
 
	* Makefile.am (EXTRA_DIST): Add README.in, INSTALL.in - 
	autoconf-2.5x checks for 'make dist' in the tarball
	when you make distcheck.

	* glib/Makefile.am (EXTRA_DIST): Distribute 
	makefile.msc/mingw.in, glib.rc.in.

	* tests/patterntest.c: Include string.h.

	* glib/gpattern.c (g_utf8_reverse): doc parsing fix.

Thu Nov 22 02:50:18 2001  Tim Janik  <timj@gtk.org>

	* NEWS: merged with gobject/NEWS.

2001-11-21  Tor Lillqvist  <tml@iki.fi>

	* glib/makefile.mingw.in (DEFINES): Set G_LOG_DOMAIN as in
	Makefile.am.

Tue Nov 20 20:54:25 2001  Owen Taylor  <otaylor@redhat.com>

	* glib/gunidecomp.[ch] glib/gen-unicode-tables.pl: Patch
	from Andrew Taylor to optimize the decomposition table
	to eliminate relocations and save space. (#64982)

2001-11-18  Hans Breuer  <hans@breuer.org>

	* glib/glib.def : 
	* glib/makefile.msc.in : remove g_log_domain_glib usage/export

	* tests/makefile.msc.in : add iochannel-test

Sat Nov 17 17:21:57 2001  Owen Taylor  <otaylor@redhat.com>

	* glib/Makefile.am glib/*.c glib/gmessages.h: Get
	rid of g_log_domain_glib variable in favor of just
	using a string constant.

Sat Nov 17 14:10:35 2001  Owen Taylor  <otaylor@redhat.com>

	* glib/gbsearcharray.h: Include gtypes.h not gobject/gtype.h

	* glib/glib-object.h gobject/*.h: Prevent headers from
	being included directly except when compiling GObject.

	* gobject/gvaluecollector.h: Include glib-object.h so that
	this file can be included directly, since we don't
	include it _from_ glib-object.h.
