@@ -1,3 +1,13 @@
+2001-11-23  Hans Breuer  <hans@breuer.org>
+
+	* glib/makefile.msc.in : added -Zm400 to DEPCFLAGS to avoid :
+	gunidecomp.h(5846) : fatal error C1076: compiler limit : 
+	internal heap limit reached; use /Zm to specify a higher limit
+
+	* glibconfig.h.win32.in : added recommended pragma list for
+	msvc again. They are an invaluable help of letting the
+	compiler catch bugs.
+
 Thu Nov 22 13:56:55 2001  Owen Taylor  <otaylor@redhat.com>
 
 	* Version 1.3.11
